--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:id="@+id/header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/header"
+        android:text="@string/taskloggerizer"
         android:padding="10dp"
         android:layout_marginTop="15dp"
         android:textAlignment="center"
