--- a/app/src/main/res/layout/task_layout.xml
+++ b/app/src/main/res/layout/task_layout.xml
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginTop="15dp"
-            android:text="@string/task"
+            android:text=""
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@id/taskIcon"
@@ -52,7 +52,7 @@
             android:layout_marginStart="15dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="15dp"
-            android:text="@string/deadline"
+            android:text=""
             android:textSize="14sp"
             app:layout_constraintStart_toEndOf="@id/taskIcon"
             app:layout_constraintTop_toBottomOf="@id/task"
