--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -24,6 +24,7 @@
                 android:id="@+id/detail_header"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="15dp"
                 android:text="Header"
                 android:textAlignment="center"
                 android:textStyle="bold"
@@ -35,21 +36,21 @@
                 android:id="@+id/detail_deadline"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="15dp"
                 android:text="@string/deadline"
                 android:textAlignment="center"
                 android:textSize="16sp"
-                android:textStyle="italic"
-                android:layout_margin="15dp"/>
+                android:textStyle="italic" />
 
             <!-- Task description -->
             <TextView
                 android:id="@+id/detail_desc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="15dp"
                 android:text="@string/description"
                 android:textAlignment="center"
-                android:textSize="12sp"
-                android:layout_margin="15dp" />
+                android:textSize="12sp" />
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
